docs(competitive-landscape): measure FQLite on 0F/0B (identical bytes); document WAL blocker
The FQLite headless tap (tools/fqlite/, gitignored) builds and runs: OpenJDK 25
+ OpenJFX 22.0.2, engine + HeadlessTap compiled against
commons-codec/jspecify/antlr/sqlite-jdbc, gui.add_table null-guarded, rag/erm
stubbed. Ran it on the three paper false-positive fixtures (identical bytes the
other oracles were scored on) and scored TP/FP the same content-keyed way:

- 0F (f.db): TP=11/50 deleted freelist rows, FP=0 live, precision 1.000,
  recall 0.220 (plus 1 sqlite_master schema row + 2 untagged fragments, neither
  a scorable live/deleted data row).
- 0B (b.db): TP=5 OLD residue (OLD-NAME-6..10), FP=0 live NEW, precision 1.000,
  recall 0.500 — matches bring2lite/SQL-DRP exactly.
- 10 (wcase.db + -wal): NO measured number. FQLite's WAL recovery is
  structurally GUI-coupled (WALReader is built by a JavaFX ImportDBTask; the WAL
  table wiring in Job.processDB() sits inside `if (gui != null)` blocks). Driving
  Job.run() headless leaves job.wal == null and recovers nothing; the tap was
  extended to set readWAL/walpath and drain job.wal.resultlist, but the
  GUI-coupled instantiation cannot be reached without reconstructing ImportDBTask
  or refactoring processDB. Scenario 10 keeps FQLite's cited (paper) figure — no
  WAL number is fabricated.

Move FQLite from "cited" to "measured (this repo, identical bytes)" in the 0F/0B
tables; split the combined "Bring2Lite / FQLite" cited rows; record the exact
build recipe + WAL blocker in the Oracle-provenance note and corpus-catalog §F.2.
Docs + gitignored tools/ only; no Rust touched.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>